--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
         "js-confetti": "^0.11.0",
         "localforage": "^1.10.0",
         "next": "13.1.1",
+        "pdf-lib": "^1.17.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hot-toast": "^2.4.0",
